lib/src/compiler/tests/testdata/errors/7.out
error[E104]: unexpected negative number
 --> line:2:19
  |
2 |   condition: 1 << -1 == 0
  |                   ^^ this number can not be negative
  |